# microservice-django-payment-service

./: .env.example  .gitignore  Jenkinsfile  README.md  docker-compose.prod.yml  docker-compose.yml  dockerfile  dockerfile.prod  pyproject.toml  setup.sh
Infastructure/domain/interface/: model.py
Infastructure/domain/repository/: userRepository.py
Infastructure/event/interface/: topicInterface.py
Infastructure/event/listener/: topic.py
Infastructure/kafka/: consumer.py  producer.py
Infastructure/management/commands/: ConsumerCommand.py
Infastructure/service/: __init__.py
Infastructure/service/factory/paymentFactory/: omisePayment.py
Infastructure/service/interface/: payment.py
Infrastructure/domain/interface/: model.py
Infrastructure/domain/repository/: userRepository.py
Infrastructure/event/listener/: topic.py
Infrastructure/kafka/: consumer.py
Infrastructure/management/commands/: ConsumerCommand.py
Infrastructure/service/: __init__.py
Infrastructure/service/factory/: api.py  renderpdf.py
Infrastructure/service/interface/: render.py
Nginx/: django.conf
djangopayment/: asgi.py  settings.py  urls.py  wsgi.py
payment/: models.py  serializers.py  urls.py  views.py
payment/migrations/: 0001_initial.py  0002_user_description.py  0003_user_customer_omise_id.py  0004_rename_description_user_username_remove_user_phone.py  0005_payment.py  0006_payment_code_payment_status.py  0007_rename_payment_statement.py  0008_alter_user_id.py
quotation/: serializers.py  urls.py  views.py
service/: renderpdf.py
templates/ksn/: quotation.html
(+2 files in other folders)
