[tool.poetry]
name = "djangopayment"
version = "0.1.0"
description = ""
authors = ["ratchaphon1412 <ratchaphon.h111@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
djangorestframework = "^3.14.0"
markdown = "^3.4.4"
django-filter = "^23.2"
python-dotenv = "^1.0.0"
psycopg2-binary = "^2.9.7"
psycopg2 = "^2.9.7"
django = "^4.2.4"
xhtml2pdf = "^0.2.11"
pillow = "^10.0.0"
kafka-python = "^2.0.2"
omise = "^0.12.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
